# mainframe

./: .aiignore  .deepsource.toml  .dockerignore  .gitignore  .pre-commit-config.yaml  .safety-policy.yml  CONTRIBUTING.md  Dockerfile  Procfile  README.md  agents.md  dump.rdb  gunicorn.config.py  package-lock.json  package.json  pyproject.toml  sonar-project.properties
.devcontainer/: devcontainer.json  post-create.sh  post-start.sh
.devcontainer/scripts/: install-locale.sh  install-postgres.sh  install-redis.sh  install-uv.sh  set-local-env-vars.sh
.github/workflows/: black.yml  gcp-deploy-frontend.yml  gcp.yml  gcr-frontend-deploy.yml  main.yml  workflow_notifications.yml
.husky/: pre-commit
.sonarlint/: connectedMode.json
backend/: .gitignore  .pre-commit-config.yaml  Dockerfile  gunicorn.config.py  manage.py  pyproject.toml  requirements.test.txt  requirements.txt  test.env
backend/api/: tasks.py  urls.py
backend/api/authentication/: backends.py  serializers.py  viewsets.py
backend/api/bots/: routers.py  serializers.py  views.py
backend/api/commands/: routers.py  views.py
backend/api/devices/: routers.py  views.py
backend/api/earthquakes/: routers.py  serializers.py  views.py
backend/api/groups/: routers.py  serializers.py  viewsets.py
backend/api/hooks/: github.py  urls.py
backend/api/huey_tasks/: routers.py  views.py
backend/api/lights/: client.py  routers.py  urls.py  views.py
backend/api/logs/: routers.py  urls.py  views.py
backend/api/rpi/: routers.py  views.py
backend/api/user/: admin.py  models.py  routers.py  serializers.py  tests.py  viewsets.py
backend/bots/: admin.py  models.py  routers.py  serializers.py  tasks.py  views.py
backend/bots/clients/: challonge.py  mongo.py
backend/bots/migrations/: 0001_initial.py  0002_bot_webhook_name.py  0003_rename_is_external_bot_is_active.py  0004_message.py
backend/bots/webhooks/: butler.py  lights.py  pool_cluj.py  shared.py
backend/camera/: consumers.py  routers.py  routing.py  views.py
backend/clients/: bnr.py  chat.py  classifier.py  cron.py  ctp.py  healthchecks.py  lights.py  logs.py  meals.py  os.py  prediction.py  scraper.py  storage.py  system.py  telegram.py  translate.py
backend/core/: asgi.py  settings.py  tasks.py  test_settings.py  urls.py
backend/credit/: admin.py  models.py  routers.py  serializers.py  views.py
backend/credit/migrations/: 0001_initial.py  0002_credit_number_of_months.py  0003_alter_credit_number_of_months.py
backend/credit/tests/: factories.py  tests.py
backend/crons/: admin.py  apps.py  models.py  routers.py  serializers.py  views.py
backend/crons/migrations/: 0001_initial.py  0002_alter_cron_unique_together_cron_is_management_and_more.py  0003_remove_cron_description_remove_cron_is_management.py  0004_cron_args.py
backend/deploy/: crons  hooks.py  setup.sh
backend/deploy/services/: backend.service  ngrok.service
backend/devices/: admin.py  models.py  routers.py  serializers.py  views.py
backend/devices/migrations/: 0001_initial.py  0002_device_is_active.py  0003_alter_device_name.py
backend/earthquakes/: admin.py  models.py  tasks.py
backend/earthquakes/migrations/: 0001_initial.py  0002_earthquake_source.py
backend/exchange/: admin.py  models.py  routers.py  serializers.py  tasks.py  views.py
backend/exchange/management/: clients.py
backend/exchange/migrations/: 0001_initial.py  0002_alter_exchangerate_value.py  0003_alter_exchangerate_value.py
backend/expenses/: models.py  routers.py  serializers.py  views.py
backend/expenses/migrations/: 0001_initial.py  0002_remove_debt_to_alter_expensegroup_created_by.py  0003_alter_debt_expense.py
backend/finance/: admin.py  models.py  routers.py  serializers.py  tasks.py  views.py
backend/finance/management/: clients.py
backend/finance/migrations/: 0001_initial.py  0002_alter_account_number.py  0003_account_type.py  0004_account_bank.py  (+21 more)
backend/meals/: admin.py  models.py  routers.py  serializers.py  tasks.py  views.py
backend/tests/: .env  conftest.py
backend/transactions/: admin.py  models.py  routers.py  serializers.py  views.py
backend/transit_lines/: admin.py  apps.py  clients.py  models.py  tasks.py
backend/watchers/: apps.py  models.py  routers.py  serializers.py  tasks.py  views.py
deploy/: .env  .zshrc  crons  example.config.alloy  initial.sh  nginx.conf  ngrok.yml  requirements.txt  setup.sh  show-logs.sh  wifi-repair.sh
deploy/backup/: backend.service
deploy/services/: backend.service  bot.service  daphne.service  frontend.service  gunicorn.service  huey.service  network-online-check.service  ngrok.service  picamera.service  quiz.service  redis.service  telegram.service  wifi-repair.service  wifi-repair.timer
deploy/setup/: nginx.sh  zsh.sh
django-api/: pyproject.toml  requirements.txt
django-api/api/: urls.py
django-api/api/bots/: routers.py  serializers.py  views.py
django-api/api/hooks/: github.py
django-api/bots/: admin.py  models.py
django-api/bots/migrations/: 0001_initial.py  0002_bot_additional_data.py
django-api/core/: settings.py
django-api/deploy/: hooks.py  setup.py
django-api/deploy/services/: backend.service  ngrok.service
frontend/: .prettierignore  dump.rdb  package-lock.json  package.json
frontend/.docker/: .dockerignore  Dockerfile
frontend/public/: index.html
frontend/src/: constants.js  i18n.js  index.js  routes.js  serviceWorker.js  setupTests.js
react-ui/: package-lock.json  package.json
react-ui/src/: App.js  index.js
src/: manage.py
tests/: conftest.py
tests/api/: factories.py  test_authentication.py  test_user.py
tests/clients/: test_calendar.py  test_chat.py  test_scraper.py
tests/crons/: test_serializers.py
tests/earthquakes/: test_timezones.py
tests/events/: test_models.py  test_views.py
tests/factories/: authentication.py  bots.py  crons.py  earthquakes.py  events.py  exchange.py  expenses.py  finance.py  groups.py  source.py  user.py  watchers.py
tests/finance/: test_views.py
tests/watchers/: conftest.py  test_models.py  test_serializers.py  test_views.py
(+827 files in other folders)
