[project]
name = "mainframe"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Andrei Pradan", email = "work@pradan.dev" }
]
dependencies = [
    "aiohttp>=3.9.0",
    "axiom-py==0.1.0",
    "beautifulsoup4==4.11.1",
    "django==5.0.4",
    "django-cors-headers==3.13.0",
    "django-environ==0.9.0",
    "django-extensions==3.2.1",
    "djangorestframework==3.14.0",
    "google-cloud-storage==2.9.0",
    "gunicorn==22.0.0",
    "huey==2.5.0",
    "logfire[django,system-metrics]>=0.37.0",
    "lxml>=5.2.2",
    "openpyxl==3.1.2",
    "pillow==10.0.1",
    "psutil==5.9.5",
    "psycopg2-binary==2.9.5",
    "pygithub>=2.3.0",
    "pyjwt==2.6.0",
    "pypdf2==3.0.1",
    "python-crontab==2.7.1",
    "python-dotenv==1.0.0",
    "python-telegram-bot==13.11",
    "redis==5.0.0",
    "requests==2.31.0",
    "urllib3==1.26.18",
    "yeelight==0.7.10",
    "sentry-sdk==2.0.0",
    "setuptools>=65.5.1",
    "tornado>=6.3.3",
    "certifi>=2023.7.22",
    "dnspython>=2.6.0rc1",
    "sqlparse>=0.5.0",
    "defusedxml>=0.7.1",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mainframe"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.isort]
src_paths = ["."]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "mainframe.core.settings"
addopts = """\
           --nomigrations \
           --reuse-db \
           --disable-socket \
           -v
"""
python_files = ["test_*.py"]
pythonpath = "src"

[tool.pytest_env]
ENV = { value = "test", skip_if_set = true }

[tool.rye]
managed = true
dev-dependencies = [
    "black>=24.4.2",
    "django-debug-toolbar>=4.3.0",
    "factory-boy>=3.3.0",
    "ipython>=8.24.0",
    "pytest>=8.2.0",
    "pytest-django>=4.8.0",
    "pytest-env>=1.1.3",
    "pytest-socket>=0.7.0",
    "pytest-cov>=5.0.0",
    "pre-commit>=3.7.1",
]
virtual = true

[tool.rye.scripts]
dev = "python src/manage.py runserver"
migrate = "python src/manage.py migrate"
shell = "python src/manage.py shell_plus"

[tool.ruff]
target-version = "py310"
# https://docs.astral.sh/ruff/rules/
lint.select = [
    "I",   # isort
    "E",   # pycodestyle
    "F",   # pyflakes
    "PL",  # pylint
    "C90", # mccabe
    "B",   # flake8-bugbear
    "S",   # flake8-bandit
    "DJ",  # flake8-django
    "SIM", # flake8-simplify
    "T10", # flake8-debugger
    "G",   # flake8-logging-format
    "C4",  # flake8-comprehensions
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101", # asserts allowed in tests
    "PLR2004", # magic value used in comparison
]
"**/tests/**/*.py" = [
    "S101", # asserts allowed in tests
    "PLR2004", # magic value used in comparison
]
